# ot-harjoitustyo

./: README.md  pyproject.toml  tasks.py
dokumentaatio/: aikakirjanpito.md  vaatimusmäärittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: cards.py  game.py
src/tests/: cards_test.py
