[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["aapohu <aapo.huhtalo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^2.0.1"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
